--- a/partials/UAV-Resume-en.html
+++ b/partials/UAV-Resume-en.html
@@ -21,7 +21,7 @@
       <div class="about">
         <h1 class="about-name">Ievgen Plakhotniuk</h1>
 
-        <h2 class="about-position">COO</h2>
+        <h2 class="about-position">Chief operation officer</h2>
         <!-- <h3 class="title">Summary</h3>
 
           <p class="about-discription">
@@ -41,6 +41,17 @@
         <h3 class="title">Work Experience</h3>
         <ul>
           <!--Company 1-->
+          <li class="work-list">
+            <p class="organization">Company for the production of drones</p>
+            <p class="period">November 2024 -until now <span class="line">|</span> Kyiv, Ukraine</p>
+            <h4 class="work-position">Chief operation officer</h4>
+            <p class="work-list-item">Planning of production and testing processes in the company.</p>
+            <p class="work-list-item">Quality control of development and production.</p>
+            <p class="work-list-item">Conducting interviews, purchases, organizational issues</p>
+            <p class="work-list-item">Direct participation in flight tests</p>
+            production</p>
+          </li>
+
 
           <!-- <li class="work-list">
               <p class="organization">Freelance</p>
@@ -58,7 +69,7 @@
           <!--Company 2-->
           <li class="work-list">
             <p class="organization">Company for the production of drones</p>
-            <p class="period">sept 2023 -until now <span class="line">|</span> Kyiv, Ukraine</p>
+            <p class="period">sept 2023 -November 2024 <span class="line">|</span> Kyiv, Ukraine</p>
             <h4 class="work-position">Production manager</h4>
             <p class="work-list-item">Organization and control of the production process from "scratch".</p>
             <p class="work-list-item">Purchase of components, materials, tools.</p>
@@ -233,16 +244,16 @@
       </div>
       <!--Tech Skills-->
       <div class="tech-skills">
-        <h3 class="sidebar-title">Tech Skills</h3>
+        <h3 class="sidebar-title">Hard Skills</h3>
         <ul class="tech-skills-list">
           <li class="tech-skills-item">
-            <span class="tech-skills-list">Composite material</span>
+            <span class="tech-skills-list">Effective planning</span>
           </li>
           <li class="tech-skills-item">
-            <span class="tech-skills-list">Формове обладнання</span>
+            <span class="tech-skills-list">Process control</span>
           </li>
-          <li class="tech-skills-item"><span class="tech-skills-list">Kompas</span></li>
-          <li class="tech-skills-item"><span class="tech-skills-list">SolidWorks</span></li>
+          <li class="tech-skills-item"><span class="tech-skills-list">Evaluation of results</span></li>
+          <li class="tech-skills-item"><span class="tech-skills-list">Setting measurable goals</span></li>
           <!-- <li class="tech-skills-item">
             <span class="tech-skills-list"> Mission planner</span>
           </li>
